[css] small fixes for rare taxa page on mobile

--- a/js/react/src/less/taxa.less
+++ b/js/react/src/less/taxa.less
@@ -97,7 +97,6 @@
   }
   .slider-wrapper {
 		max-height: 150px;
-		overflow: hidden; 
   }
   .sidebar-section {
   	a {
@@ -204,6 +203,9 @@
 		.row .subheading-key {
 			font-weight: 700;
 			margin-right: 4pt;
+		}
+		.row .char-value {
+			overflow-wrap: break-word;
 		}
 	}
 }
